# tiaoqi

./: README.md  meson.build  org.gnome.Tiaoqi.json~
data/: meson.build  org.gnome.Tiaoqi.appdata.xml.in  org.gnome.Tiaoqi.desktop.in  org.gnome.Tiaoqi.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  tiaoqi.gresource.xml  window.ui  window.vala
